# ilograph-cli

./: .gitignore  .importlinter  .pre-commit-config.yaml  README.md  pyproject.toml
.hypothesis/constants/: 0792fb55a9e95bee  07b86b8b2728cd89  0e74e2021e911939  16c2652f09747d18  16fe713144b7ccdf  1a0b863e77e6d696  1b1d15764f451b14  2214013fd27c02a2  2349ade71f7215a4  267115883b6a7444  2cbfee666aa29cc8  3e78e9bbcbbf3e22  3f2009f260c9e050  4ad269e8fa8b854b  4bfc1dc0f8118c91  504d04e41276e253  50a18b3d9f832b61  53e10bda3ee145d1  5a2b1521b52426ba  5a408ca38c56beb9  5f246ccf54bb9c8c  60cc083577382569  63f7afcf072faa42  6861c7af64c3a8c9  78eaedf86d2ad851  825b8caeee4f6e7d  838d5e9c5aa8f18d  8cdc99c4c2a266d4  8dcbb2536b33913c  8fb1aa9bcce085b1  9607189386b63f59  9a61171fd8d61682  9befb55d4e3a5542  a75e67734fe3ad78  a9f645c4e5cbbe15  b16fb0093854c11d  b6847339a9205cc9  b8d69c06ad48eb21  bfea1a46b8559fea  c151db975e3f99c9  (+13 more)
docs/: errors.md  ops.md
src/ilograph_cli/: __init__.py  cli.py  cli_app.py  cli_options.py  cli_support.py
src/ilograph_cli/commands/: alias.py  apply.py  batch.py  check.py  context.py  fmt.py  group.py  impact.py  move.py  override.py  perspective.py  relation.py  rename.py  resolve.py  resource.py  sequence.py  walkthrough.py
src/ilograph_cli/core/: arg_models.py  constants.py  errors.py  impact.py  index.py  normalize.py  ops_models.py  reference_fields.py  reference_resolution.py  references.py  relation_types.py  validators.py  yaml_types.py
src/ilograph_cli/io/: diff.py  yaml_io.py  yaml_style.py
src/ilograph_cli/ops/: alias_ops.py  apply_ops.py  context_ops.py  dispatch.py  group_ops.py  override_ops.py  perspective_ops.py  relation_ops.py  resource_ops.py  sequence_ops.py  walkthrough_ops.py
tests/: invalid_check.yaml  test_cli.py  test_properties_references.py  test_properties_relation_ops.py  test_properties_yaml_io.py  test_readme_docs.py  test_references.py
tests/golden/apply_ops/: expected.yaml  input.yaml  ops.yaml
tests/golden/move_resource/: expected.yaml  (+1 more)
(+9 files in other folders)
